# statbotics

./: .flake8  .gitattributes  .gitignore  .gitmodules  .isort.cfg  .pre-commit-config.yaml  .travis.yaml  .travis.yml  CLAUDE.md  Methods.md  Pipfile  README.md  Statbotics Examples.ipynb  app.yaml  app.yml  baseline.txt  calc_stats.py  classes.py  docker-compose.yaml  elo.py  load_matches.py  load_team_info.py  package.json  prep_data.py  process.py  push_data.py  pyproject.toml  pyrightconfig.json  requirements.txt  script.sql  setup.py  statbotics.code-workspace  stats.py  test.py  travis.json.enc  travis.yml  utils.py
api/: .gitignore  .readthedocs.yaml  CLAUDE.md  DOCS.md  README.md  api.py  pyproject.toml  requirements.txt  test.py
api/docs/: conf.py  index.rst  requirements.txt
api/src/: constants.py  main.py  validate.py
api/statbotics/: constants.py  main.py  validate.py
api/tests/: test_framework.py  test_login.py  test_team_events.py  test_teams.py
backend/: .env-template  .gcloudignore  .gitignore  CLAUDE.md  DOCS.md  Dockerfile  Pipfile  README.md  __init__.py  app.yaml  cloudbuild.yaml  constants.py  main.py  manage.py  package.json  pyproject.toml  requirements.txt  settings.py  urls.py
backend/backend/: constants.py  settings.py  urls.py
backend/data/: epa_breakdown.json  epa_breakdown_percentiles.json  event_epa_breakdown.json
backend/deploy/: api_app.yaml  api_cloudbuild.yaml  cors.json  data_app.yaml  data_cloudbuild.yaml  dispatch.yaml  notes.txt  site_app.yaml  site_cloudbuild.yaml
backend/rankings/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py
backend/rankings/event_pred/: read.py
backend/rankings/event_pred/models/: elo.py  opr.py
backend/rankings/migrations/: 0001_initial.py
backend/rankings/views/: event_pred_views.py  event_views.py  match_views.py  model_views.py  team_event_views.py  team_match_views.py  team_views.py  team_year_views.py  year_views.py
backend/src/: auth.py  breakdown.py  constants.py  main.py  manage.py
backend/src/api/: __init__.py  event.py  main.py  match.py  query.py  router.py  stats.py  team.py  team_event.py  team_match.py  team_year.py  utils.py  year.py
backend/src/api/aggregation/: README.md  __init__.py  event.py  match.py  team.py  team_event.py  team_match.py  team_year.py  year.py
backend/src/api/db/: README.md  event.py  match.py  team.py  team_event.py  team_match.py  team_year.py  year.py
backend/src/api/models/: __init__.py  event.py  main.py  match.py  team.py  team_event.py  team_match.py  team_year.py  year.py
backend/src/api/v2/: event.py  match.py  team.py  team_event.py  team_match.py  team_year.py  utils.py  year.py
backend/src/backend/: asgi.py  constants.py  settings.py  urls.py  wsgi.py
backend/src/data/: CLAUDE.md  avg.py  colors.py  epa.py  main.py  nepa.py  router.py  tba.py  utils.py  wins.py
backend/src/data/epa/: agg.py  calc.py  main.py  metrics.py
backend/src/data/insert/: avg.py  main.py  tba.py  utils.py
backend/src/db/: inspect.py  main.py
backend/src/db/functions/: __init__.py  clear_year.py  noteworthy_matches.py  remove_teams_no_events.py  upcoming_matches.py  update_teams.py
backend/src/db/models/: __init__.py  create.py  etag.py  event.py  match.py  team.py  team_event.py  team_match.py  team_year.py  types.py  year.py
backend/src/google/: storage.py
backend/src/models/: template.py  types.py
backend/src/rankings/: admin.py  filters.py  models.py  serializers.py  urls.py
backend/src/site/: event.py  helper.py  hypo_event.py  match.py  router.py  static.py  team.py  team_year.py
backend/src/tba/: breakdown.py  clean_data.py  constants.py  main.py  mock.py  read_tba.py  types.py
backend/src/types/: enums.py
backend/src/utils/: alru_cache.py  compress.py  decorators.py  hypothetical.py  utils.py
backend/static/drf-yasg/: immutable.min.js  insQ.min.js  redoc-init.js  style.css  swagger-ui-init.js  url-polyfill.min.js
backend/tests/: test_team_event_sort.py
data/: .env-template  .gitignore  .pre-commit-config.yaml  DOCS.md  README.md  app.yaml  clean.py  cloudbuild.yaml  main.py  pyproject.toml  requirements.txt  update.py
data/2023/: epa_breakdown.json  epa_breakdown_full.csv  epa_breakdown_percentiles.json  redwood.csv  shoreline.csv  team_list.json
data/calculate/classes/: read.py
data/calculate/process/: process_push.py
data/src/: main.py  new_main.py  update.py
data/src/db/: inspect.py  main.py
data/src/helper/: utils.py
data/src/models/: elo.py  opr.py
data/src/new_process/: process_avg.py  process_elo.py  process_tba.py
data/src/process/: process_avg.py  process_elo.py  process_main.py  process_opr.py  process_push.py  process_single_opr.py  process_tba.py
data/src/tba/: clean_data.py  config.py  read_tba.py
mcp/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
mcp/statbotics_mcp/: __init__.py  cli.py  client.py  server.py
mcp/tests/: test_server.py
models/: .gitignore  README.md  base.py  data.sql  epa_model.py  main.py  pyproject.toml  runner.py  wins_model.py
models/src/: baseline.py  breakdown.py  classes.py  data.py  metrics.py  sim.py  simulation.py  utils.py
models/src/models/: baseline.py  elo.py  epa.py  epa_v2.py  epa_v2_breakdown.py  epa_v2_math.py  template.py
models/src/simulation/: data.py  main.py
scripts/: .gitignore  CLAUDE.md  Calibration Check.ipynb  Elo Parameter Tuning.ipynb  README.md  Statbotics Examples.ipynb  Year Normalized Elo.ipynb  pyproject.toml
scripts/2023/: Add Champs Teams.ipynb  Component EPAs.ipynb  Contest.ipynb  Misc.ipynb  Qualification Likelihood.ipynb  Simulate Champs V2.ipynb  Simulate Champs V3.ipynb  Simulate Champs V4.ipynb  Simulate Champs V5.ipynb  Simulate Champs.ipynb  Week 1.ipynb  contest_responses.csv
scripts/api/: Examples.ipynb
scripts/baselines/: Baseline Metrics.ipynb
scripts/exploration/: Component EPAs.ipynb  High Score Progression.ipynb  Nonlinear Sum EPA.ipynb  Past Season Impact.ipynb  Simulation.ipynb  Top Teams EPA.ipynb  Year Normalized EPA vs. Unitless EPA.ipynb
(+1313 files in other folders)
