[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "statbotics"
version = "1.0.0"
description = "Modernizing FRC Data Analytics"
authors = ["Abhijit Gupta <avgupta456@gmail.com>"]
license = "MIT License"

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/statbotics/statbotics"
homepage = "https://statbotics.io"

keywords = ['FIRST', 'robotics', 'data', 'analysis', 'ranking']

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.24.0"
cachecontrol = "^0.12.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
