[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "statbotics"
version = "3.0.0"
description = "Modernizing FRC Data Analytics"
authors = ["Abhijit Gupta <avgupta456@gmail.com>"]
license = "MIT License"

readme = 'README.md'  # Markdown files are supported

repository = "https://github.com/avgupta456/statbotics"
homepage = "https://statbotics.io"

keywords = ['FIRST', 'robotics', 'data', 'analysis', 'ranking']

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.2"
cachecontrol = "^0.12.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
