[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Abhijit Gupta <avgupta456@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
fastapi = "^0.79.0"
python-dotenv = "^0.20.0"
uvicorn = "^0.18.2"
gunicorn = "^20.1.0"
requests = "^2.28.1"
SQLAlchemy = "^1.4.40"
sqlalchemy-cockroachdb = "^1.4.3"
psycopg2 = "^2.9.3"
attrs = "^22.1.0"
scipy = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
