[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Abhijit Gupta <avgupta456@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
notebook = "^6.4.6"
scikit-learn = "^1.2.0"
statbotics = "^2.0.1"
tornado = "6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
